# PlugKit

./: .gitignore  .gitmodules  .yarnrc.yml  Cargo.toml  README.md  package.json  tsconfig.base.json
app/: package.json  tsconfig.json  vite.config.ts
app/dist-isolation/: index.html  index.js
app/public/: case.htm  case.html  case.js
app/src/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  tray.rs
app/src/home/: App.tsx
app/src/main/: App.css  App.tsx  index.css
app/src/setting/: App.tsx  index.html
memento/: CREDITS.md  security.md
shared/deep-linking/: Cargo.toml  package.json
shared/deep-linking/src/: lib.rs  windows.rs
shared/log/: Cargo.toml  package.json
shared/log/lib/: index.ts
shared/log/src/: lib.rs
src-tauri/: tauri.conf.json
src/windows/: package.json
src/windows/src/: App.tsx  index.css
src/windows/src-tauri/: tauri.conf.json
src/windows/src-tauri/icons/: icon.icns
src/windows/src-tauri/src/: main.rs
utils/log/: Cargo.toml  package.json
utils/log/src/: lib.rs
