[workspace]
members = ["app/src-tauri", "core", "addons/*", "shared/*"]

[workspace.package]
version = "0.0.1"
authors = ["Han <deskbtm@outlook.com>"]
repository = "https://github.com/deskbtm-plugkit/plugkit"
rust-version = "1.59"
edition = "2021"

[workspace.dependencies]
once_cell = "1.14.0"
tauri = "1.2.4"
tauri-build = "1.2.1"
tauri-utils = "1.2.1"
tauri-runtime-wry = "0.12.2"
windows = "0.39.0"
tao = "0.15"
log = "0.4.17"
serde = "1.0"
serde_json = "1.0"
wry = { version = "0.23", default-features = false }
webview2-com = "0.19.1"
winreg = "0.50.0"

#PlugKit libraries
plugkit-addon-log = { path = "./shared/log" }
plugkit-core = { path = "./core" }
