[workspace]
members = ["app/src-tauri", "core", "shared/*"]

[workspace.package]
version = "0.0.1"
authors = ["Han <deskbtm@outlook.com>"]
repository = "https://github.com/deskbtm-plugkit/plugkit"
rust-version = "1.60"
edition = "2021"

[workspace.dependencies]
once_cell = "1.14.0"
tauri = "1.3"
tauri-build = "1.3"
tauri-utils = "1.3"
tauri-runtime-wry = "0.13.0"
windows = "0.39.0"
tao = "0.16"
log = "0.4.17"
serde = "1.0"
serde_json = "1.0"
wry = { version = "0.24.1", default-features = false }
webview2-com = "0.19.1"
winreg = "0.50.0"
plugkit-addon-log = { path = "shared/log" }
plugkit-core = { path = "core" }

# PlugKit libraries
# [patch.crates-io]
# plugkit-addon-log = { path = "shared/log" }
# plugkit-core = { path = "core" }
