[package]
name = "plugkit-app"
version = "0.0.1"
description = "A desktop extension"
repository = "https://github.com/deskbtm-plugkit/plugkit"
authors = ["Han <deskbtm@outlook.com>"]
rust-version = "1.60"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = ["isolation"] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true, features = [
  "api-all",
  "devtools",
  "isolation",
  "system-tray",
  "wry",
] }
tauri-runtime-wry = { workspace = true }
plugkit-core = { version = "0.0.1" }
plugkit-addon-log = { version = "0.0.1", features = ["colored"] }


[target."cfg(windows)".dependencies]
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_WinRT",
  "Win32_UI",
  "Win32_Graphics_Gdi",
] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
