[package]
name = "plugkit-addon-deep-linking"
version = "0.0.1"
description = "plugkit addon forks from https://github.com/FabianLars/tauri-plugin-deep-link"
repository = "https://github.com/deskbtm-plugkit/plugkit"
readme = "README.md"
#authors = { workspace = true }
rust-version = "1.59"
edition = "2021"


[target."cfg(windows)".dependencies]
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
webview2-com = { workspace = true }
winreg = { workspace = true }
interprocess = { version = "1.2", default-features = false }

[dependencies]
dirs = "5"
once_cell = { workspace = true }
tauri-utils = { workspace = true }
log = { workspace = true }
