[package]
name = "plugkit-addon-deep-linking"
version.workspace = true
description = "plugkit addon forks from https://github.com/FabianLars/tauri-plugin-deep-link"
repository = "https://github.com/deskbtm-plugkit/plugkit"
readme = "README.md"
authors = ["Han <deskbtm@outlook.com>"]
edition = "2021"


[target."cfg(windows)".dependencies]
windows = { version = "0.39.0", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
winreg = { version = "0.50.0" }
interprocess = { version = "1.2", default-features = false }

[dependencies]
dirs = "5"
once_cell = { version = "1.14.0" }
tauri-utils = { version = "1.3.0" }
log = { version = "0.4.17" }
