[package]
name = "plugkit-addon-log"
version = "0.0.1"
description = "tauri-plugin-log extended for plugkit"
repository = "https://github.com/deskbtm-plugkit/plugkit"
readme = "README.md"
authors = ["Han <deskbtm@outlook.com>"]
rust-version = "1.60"
edition = "2021"

[dependencies]
chrono = "0.4.22"
fern = "0.6.1"
log = { version = "0.4.17" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_repr = "0.1.9"
tauri = { version = "1.3.0" }

[features]
colored = ["fern/colored"]
