[package]
name = "plugkit-addon-log"
version.workspace = true
description = "tauri-plugin-log extended for plugkit"
repository = "https://github.com/deskbtm-plugkit/plugkit"
readme = "README.md"
authors = ["Han <deskbtm@outlook.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.22"
fern = "0.6.1"
log = { workspace = true }
serde = { workspace = true }
# serde_json = { workspace = true }
serde_repr = "0.1.9"
tauri = { workspace = true }

[features]
colored = ["fern/colored"]
