[package]
name = "plugkit-addon-log"
version.workspace = true
description = "tauri-plugin-log extended for plugkit"
repository = "https://github.com/deskbtm-plugkit/plugkit"
readme = "README.md"
authors = ["Han <deskbtm@outlook.com>"]
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
serde_repr = "0.1.9"
byte-unit = "4.0"
fern = "0.6.1"
log = { workspace = true, features = ["kv_unstable"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }

[features]
colored = ["fern/colored"]
