[package]
name = "abyss-addon-log"
version = "0.0.1"
authors = ["Han <wanghan9423@outlook.com>"]
description = "tauri-plugin-log extended for abyss"
edition = "2021"
repository = "https://github.com/deskbtm-abyss/abyss"
rust-version = "1.57"
readme = "README.md"

[dependencies]
chrono = "0.4.22"
fern = "0.6.1"
log = "0.4.17"
serde = "1.0.144"
serde_json = "1.0.85"
serde_repr = "0.1.9"
tauri = { version = "1.1.0" }

[features]
colored = ["fern/colored"]
